# Learning

./: .gitignore  markdown.md
ImageProcessAndComputerVision/openCV/: CMakeLists.txt  captureVideoFromFileOrCamera.cpp  makefile  opencv3.MSVS12.user.props  opencv310.MSVS14.user.props  savingImagesVideos.cpp  test_CvLevMarq.cpp
ImageProcessAndComputerVision/openCV/basic/: makefile  mouse-event.cpp  testCamera.cpp  trackbar.cpp
ImageProcessAndComputerVision/openCV/driver/: GazeTracker.h  coordTrans.cpp  coordTrans.h  test_camera_sync.cpp  test_camera_sync2.cpp  test_fixedEyeDis.cpp  test_headEyebarCrop.cpp  test_normalize.cpp
ImageProcessAndComputerVision/openCV/faceRecognition/: Note.md  facerec_fisherfaces.cpp
ImageProcessAndComputerVision/openCV/gazeEstimation/: test_normalize.cpp
ImageProcessAndComputerVision/openCV/pedestrainTracking/: ReadMe.txt  fg_extract.cpp  pedestrainTracking.cpp
ImageProcessAndComputerVision/openCV/pedestrianTracking/: README.md  ReadMe.txt  centroid.h  color_fg_extract.cpp  contour.h  disp_fg_extract.cpp  feature_extract.h  fg_extract.cpp  hist.h  imsimilar.h  kalman.h  mser.h  pedestrianTracking.cpp  stereo_vision.cpp  struct_obj.h  test.cpp
ImageProcessAndComputerVision/openCV/pedestrianTracking/bilinear2/: initialization.h  process.h  test.cpp  x_left.yml  y_left.yml
ImageProcessAndComputerVision/openCV/pedestrianTracking/distortionCorrection/: README.md  initialization.cpp  initialization.hpp  makefile  process.cpp  process.hpp  test.cpp
ImageProcessAndComputerVision/openCV/pedestrianTracking/sgbm_neon/: sgbm.cpp  test.cpp
(+415 files in other folders)
